--- a/details.html
+++ b/details.html
@@ -19,6 +19,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./details.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
   </head>
   <body>
     <header>
@@ -77,12 +87,15 @@
         id="project-logo"
     /></a>
     <main>
+      <img src="./assets/3548388.jpg" alt="bg-img" id="bg-img" />
       <div id="product-cont">
-        <img
-          src="https://test-hosting-8f9bf.web.app/assets/default-product.png"
-          alt="default-img"
-          id="default-img"
-        />
+        <div id="d-img">
+          <img
+            src="https://test-hosting-8f9bf.web.app/assets/default-product.png"
+            alt="default-img"
+            id="default-img"
+          />
+        </div>
         <div id="product-desc">
           <h1 id="product-title">Product Title</h1>
           <h2 id="product-brand">Product Brand</h2>
@@ -145,5 +158,9 @@
     </footer>
     <script src="./header.js"></script>
     <script src="./details.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
   </body>
 </html>
