--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <!-- Add the slick-theme.css if you want default styling -->
     <link
       rel="stylesheet"
       type="text/css"
@@ -89,6 +88,7 @@
         id="project-logo"
     /></a>
     <main>
+      <img src="./assets/3298158.jpg" alt="bg-img" id="bg-img" />
       <div id="main-banner">
         <img src="./assets/h&mBanner.png" alt="banner-img" class="banner-img" />
         <img
