--- a/success.html
+++ b/success.html
@@ -77,6 +77,7 @@
         id="project-logo"
     /></a>
     <main>
+      <img src="./assets/3548232.jpg" alt="bg-img" id="bg-img" />
       <div id="main-wrapper">
         <div id="tick-wrapper">
           <img src="./assets/white-tick.png" />
