--- a/checkout.html
+++ b/checkout.html
@@ -77,6 +77,7 @@
         id="project-logo"
     /></a>
     <main>
+      <img src="./assets/3299224.jpg" alt="bg-img" id="bg-img" />
       <h1 id="checkout-title">Checkout</h1>
       <h3 id="total-items">Total Items: <span id="t-items">1</span></h3>
       <div id="checkout-wrapper">
